--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,13 +1,10 @@
-<% if Helpers.is_logged_in?(session) %>
-<%= @error %>
-  <form action='/tweets' method="post">
-    Content:
+<% if @logged_in %>
+<%# @error %>
+  <form action='/tweets' method="post">  
+    <label>Create Your Tweet: </label>
     <input type="text" name="content"><br>
-    Create Your Tweet:
 
     <input type="submit" name="submit" id="submit">
-
-    <input type="submit" name="submit">
 
   </form>
 
