--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,5 +1,7 @@
-<% if Helpers.is_logged_in?(session) %>
+<% if logged_in? %>
 <%= @error %>
+
+
   <form action='/tweets' method="post">
     Content:
     <input type="text" name="content"><br>
@@ -7,10 +9,12 @@
 
     <input type="submit" name="submit" id="submit">
 
-    <input type="submit" name="submit">
-
   </form>
 
   <% else %>
       <h1> You Must Be Logged in to Make Tweets </h1>
   <% end %>
+
+<a href="/tweets">All</a>
+<br>
+<a href="/logout">Logout</a>
