added tweet views

--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -4,9 +4,8 @@
     <input type="text" name="content"><br>
     Create Your Tweet:
 
-    <input type="submit" name="submit" id="submit">
 
-    <input type="submit" name="submit">
+    <input type="submit" name="submit" id="submit" value="Submit">
 
   </form>
 
