--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,9 +1,9 @@
-<h2>Login to Your Account</h2>
+<h2>Welcome, login to Your Account</h2>
 
 <form method="POST" action="/login">
-    <label for="email">Email</label>
-    <input type="text" name="email">
+    <label for="username">Username</label>
+    <input type="text" name="username">
     <label for="password">Password</label>
     <input type="password" name="password">
-    <input type="submit">
+    <input type="submit" id="submit">
 </form>
