--- a/app/views/users/logout.erb
+++ b/app/views/users/logout.erb
@@ -1,4 +1,6 @@
 <form action="/logout" method="post">
   Logout?
-  <input type="submit" name="logout" >
+  <input type="submit" value="submit" name="submit" >
 </form>
+
+<%logout%>
