--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,5 +1,5 @@
 <h1>User's Tweets</h1>
-<p><%= @user.username %> tweets</p>
+<h1><%= @user.username %>'s tweets</h1>
 <%@user.tweets.each do |u|%>
 <p>Content: <%=u.content%></p>
 <% end %>
