--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,5 +1,6 @@
-<h1>User's Tweets</h1>
-<h1><%= @user.username %>'s tweets</h1>
-<%@user.tweets.each do |u|%>
-<p>Content: <%=u.content%></p>
+<p>Tweets</p>
+
+<h1><%=@user.username%></h1>
+<% @user.tweets.each do |t|%>
+<p>Content: <%=t.content%></p>
 <% end %>
