--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,5 +1,5 @@
 <p> Here are your tweets, <%= @user.username %>
-<% current_user.tweets.each do |tweet| %>
+<% @tweets.each do |tweet| %>
   <div>
     <%= tweet.content %>
   </div>
